The attribute should be an absolute URI.

--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -5,7 +5,7 @@
     {% if site.server %}
     <base href="/" />
     {% else %}
-    <base href="/2011/" />
+    <base href="http://blog.8-p.info/2011/" />
     {% endif %}
 
     <link rel="stylesheet" type="text/css"
