Add an "Archives" page.

--- a/src/_layouts/post.html
+++ b/src/_layouts/post.html
@@ -2,7 +2,10 @@
 layout: default
 ---
 <div id="container">
-  <nav><a href="/">Recent</a></nav>
+  <nav>
+    <a href="/">Recent</a>
+    <a href="/archives.html">Archives</a>
+  </nav>
 
   <article>
     <section>
