--- a/src/_layouts/post.html
+++ b/src/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 <div id="container">
   <nav>
     <a href="/">Recent</a>
-    <a href="/archives.html">Archives</a>
+    <a href="{{ site.url }}archives.html">Archives</a>
   </nav>
 
   <article>
