Add a paginator instead of an archives page.

--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,14 @@ pre {
   word-wrap: break-word;
 }
 
+#newer {
+  float: left;
+}
+
+#older {
+  float: right;
+}
+
 .gsc-control-cse {
   padding: 0;
 }
