A time and a title in one line.

--- a/src/_layouts/post.html
+++ b/src/_layouts/post.html
@@ -11,8 +11,8 @@ layout: default
       <div class="header">
         <div class="date">
           <time pubdate="pubdate"
-                datetime="{{ post.date | date: '%Y-%m-%d' }}">
-            {{ post.date | date: "%b %-d" }}
+                datetime="{{ page.date | date: '%Y-%m-%d' }}">
+            {{ page.date | date: "%b %-d" }}
           </time>
         </div>
         <h2>{{ page.title }}</h2>
