--- a/src/style.css
+++ b/src/style.css
@@ -20,10 +20,6 @@ pre {
   float: right;
 }
 
-.gsc-control-cse {
-  padding: 0;
-}
-
 header, nav, article, section {
   display: block;
 }
@@ -34,6 +30,23 @@ header, nav, article, footer .inner, #archives {
   padding: 0;
   clear: both;
 }
+
+header {
+  margin-bottom: 5em;
+}
+header h1 {
+  float: left;
+}
+
+#cse {
+  width: 20em;
+  float: right;
+}
+
+.gsc-control-cse {
+  padding: 0;
+}
+
 nav {
   text-align: right;
 }
@@ -53,7 +66,7 @@ h1, h2, h3, footer p, a.permalink, nav a, .date, address {
   padding: 0 0.5em;
 }
 
-p {
+p, article .permalink {
   line-height: 1.5;
 }
 blockquote {
@@ -73,7 +86,6 @@ a.permalink, nav a {
   color: #fff !important;
   text-decoration: none;
   background: rgb(153,210,85);
-  margin-left: 1em;
 }
 nav {
   text-align: right;
@@ -121,16 +133,23 @@ article .header h2 {
   margin-bottom: 1em;
 }
 
-.header .date {
-  float: left;
-  width: 4em;
-}
 .header h2 {
   float: left;
 }
 article h3 {
   font-size: 1em;
   margin: 2em 0 0 0;
+}
+.header .date {
+  float: left;
+  width: 4em;
+}
+article .content {
+  margin: 0 0 0 4em;
+}
+article .permalink {
+  float: left;
+  padding: 0 1em;
 }
 
 /*
