--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
 
     <link rel="alternate" type="application/atom+xml"
-          href="recent.atom" />
+          href="http://blog.8-p.info/recent.atom" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
