--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -24,8 +24,13 @@
     <footer>
       <div class="inner">
         <p class="intro">
-          Hi, My name is Kato Kazuyoshi.
-          I'm a Japanese programmer, mostly web stuff.
+          Hi. My name is
+          <a href="http://8-p.info/me/">Kato Kazuyoshi</a>.
+          I'm a Japanese programmer.
+          {% if page.title %}
+          This post is a part of
+          <a href="http://blog.8-p.info/">my blog</a>.
+          {% endif %}
         </p>
         <p>
           Feel free to contact me at kato.kazuyoshi@gmail.com.
