I should say most important thing first.

--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -24,13 +24,15 @@
     <footer>
       <div class="inner">
         <p class="intro">
-          Hi. My name is
-          <a href="http://8-p.info/me/">Kato Kazuyoshi</a>.
-          I'm a Japanese programmer.
           {% if page.title %}
           This post is a part of
           <a href="http://blog.8-p.info/">my blog</a>.
+          {% else %}
+          Hello.
           {% endif %}
+          My name is
+          <a href="http://8-p.info/me/">Kato Kazuyoshi</a>.
+          I'm a Japanese programmer.
         </p>
         <p>
           Feel free to contact me at kato.kazuyoshi@gmail.com.
