--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -32,7 +32,7 @@
           {% endif %}
           My name is
           <a href="http://8-p.info/me/">Kato Kazuyoshi</a>.
-          I'm a Japanese programmer.
+          I code for food, and for fun.
         </p>
         <p>
           Feel free to contact me at kato.kazuyoshi@gmail.com.
