--- a/src/style.css
+++ b/src/style.css
@@ -131,12 +131,15 @@ article h1, article h2 {
   font-weight: bold;
 }
 article p {
+  padding: 0;
+  margin: 1em 0 0 0;
   max-width: 40em;
+  line-height: 1.4;
 }
 article pre {
   background: #f0f0f0;
   padding: 1em 2em;
-  margin: 0 -2em;
+  margin: 1em -2em 0 -2em;
 }
 article .header h2 {
   float: left;
