--- a/src/style.css
+++ b/src/style.css
@@ -114,10 +114,15 @@ footer a {
 footer .inner {
   padding: 1em 0.5em:
 }
-footer .intro {
-  margin: 0;
-  padding: 0;
-  font-size: 100%;
+footer .text {
+  float: left;
+}
+footer .text p {
+  margin: 0 0 1em 0;
+}
+footer #badge {
+  float: right;
+  padding-bottom: 1em;
 }
 address {
   margin: 2em 0 0 0;
