--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -40,7 +40,7 @@
           </p>
         </div>
         <div id="badge">
-          <a href="http://rubykaigi.org/2011/"><img src="/2011/160x90attendee.png" alt="RubyKaigi 2011 Attendee"/></a>
+        </div>
       </div>
     </footer>
 
