http:// -> // to support both HTTP and HTTPS

--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -5,7 +5,7 @@
     {% if site.server %}
     <base href="/" />
     {% else %}
-    <base href="http://blog.8-p.info/2011/" />
+    <base href="//blog.8-p.info/2011/" />
     {% endif %}
 
     <link rel="stylesheet" type="text/css"
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
 
     <link rel="alternate" type="application/atom+xml"
-          href="http://blog.8-p.info/recent.atom" />
+          href="//blog.8-p.info/recent.atom" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
@@ -27,7 +27,7 @@
           <p>
             {% if page.title %}
             This post is a part of
-            <a href="http://blog.8-p.info/">my blog</a>.
+            <a href="//blog.8-p.info/">my blog</a>.
             {% else %}
             Hello.
             {% endif %}
